# fiberoptics-common

./: .bumpversion.cfg  .gitignore  README.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: check_code_quality.yml  publish_sphinx_documentation.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/_templates/autosummary/: README.md  class.rst  module.rst
fiberoptics/common/: __init__.py  _parsing.py  _version.py  interval.py
fiberoptics/common/auth/: __init__.py  _async.py  _base.py  _browser.py  _deprecated.py  _sync.py
fiberoptics/common/hdf/: __init__.py
fiberoptics/common/io/: __init__.py
fiberoptics/common/misc/: __init__.py  _interval.py  _version.py
fiberoptics/common/misc/Parser/: __init__.py
fiberoptics/common/plot/: __init__.py  _ticker.py
fiberoptics/common/processing/: __init__.py
fiberoptics/common/riserstools/: __init__.py
fiberoptics/common/scikit/: __init__.py
fiberoptics/common/sklearn/: __init__.py
tests/: test__init__.py  test_find_continuous_intervals.py  test_interval.py  test_parsing.py  test_version.py
tests/misc/: test_interval.py  test_parsing.py  test_version.py
tests/processing/: test_depth_aggregation.py  test_split_around_gaps.py
