[tool.ruff]
line-length = 127

[tool.ruff.lint]
ignore = ["E203", "E501", "E712"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
pythonpath = "."

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.poetry]
name = "fiberoptics-common"
version = "2.0.0"
description = ""
authors = []
repository = "https://github.com/equinor/fiberoptics-common"
documentation = "https://github.com/equinor/fiberoptics-common/docs/"
license = "Proprietary"
readme = "README.md"
packages = [{ include = "fiberoptics" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/equinor/fiberoptics-common/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "*"
azure-identity = "*"
h5py = "*"
matplotlib = "*"
scipy = "*"
scikit-learn = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
ruff = "*"
bump-my-version = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_design = "*"
sphinx_rtd_theme = "*"

[tool.bumpversion]
current_version = "2.0.0"
commit = true
message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+))?"
serialize = ["{major}.{minor}.{patch}-{release}", "{major}.{minor}.{patch}"]

[tool.bumpversion.parts.release]
values = ["prod"]
optional_value = "prod"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "fiberoptics/common/__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
