[tool.ruff]
line-length = 127

[tool.ruff.lint]
ignore = ["E203", "E501", "E712"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
pythonpath = "."

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.poetry]
name = "fiberoptics-common"
version = "2.3.2"
description = ""
authors = []
repository = "https://github.com/equinor/fiberoptics-common"
documentation = "https://github.com/equinor/fiberoptics-common/docs/"
license = "Proprietary"
readme = "README.md"
packages = [{ include = "fiberoptics" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/equinor/fiberoptics-common/issues"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.0"
azure-identity = { version = "^1.15.0", optional = true }
h5py = { version = "^3.10.0", optional = true }
matplotlib = { version = "^3.8.3", optional = true }
scipy = { version = "^1.12.0", optional = true }
scikit-learn = { version = "^1.4.1.post1", optional = true }

[tool.poetry.extras]
auth = ["azure-identity"]
io = ["h5py"]
plot = ["matplotlib"]
processing = ["scipy"]
scikit = ["scikit-learn"]
all = ["azure-identity", "h5py", "matplotlib", "scipy", "scikit-learn"]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.2"
bump-my-version = "^0.17.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx_design = "^0.5.0"
sphinx_rtd_theme = "^2.0.0"

[tool.bumpversion]
current_version = "2.3.2"
commit = true
message = "Bump version: {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+))?"
serialize = ["{major}.{minor}.{patch}-{release}", "{major}.{minor}.{patch}"]
regex = true

[tool.bumpversion.parts.release]
values = ["prod"]
optional_value = "prod"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "fiberoptics/common/__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
